traefik/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v2.1.0
          name: traefik-ingress-lb
          args:
            - --api.insecure=true
            - --log.level=INFO
            - --providers.kubernetesingress=true
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=selowenhamnf@tetrapak.com
            - --certificatesresolvers.default.acme.storage=/config/acme.json
          volumeMounts:
            - name: traefik-share
              mountPath: /config
      volumes:
        - name: traefik-share
          persistentVolumeClaim:
            claimName: traefik-share
